--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,12 @@
         <a href="index2.html">index2.html</a>
     </div>
 
-    <div>Hello</div>
-    <div class="class-1">Hello <b>World</b></div>
+    <p>Вот тебе картинка</p>
+    <img src="img/bob-avatar.jpeg" alt="">
+
+    <p>А вот ссылка на картинку</p>
+    <a href="img/bob-avatar.jpeg">
+        <img src="img/bob-avatar.jpeg" alt="">
+    </a>
 </body>
 </html>
