--- a/index2.html
+++ b/index2.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <title>Шаблон</title>
     <link rel="stylesheet" href="style.css">
-<a href=# class="btn">Вышинский крутой IT</a>
-
+    <img src="image-1.jpg">
 </head>
 <body>
-<div>Hello</div>
-<div class="class-1">Hello <b>World</b></div>
+<div class="class-2"></div>
 </body>
 </html>
