--- a/index2.html
+++ b/index2.html
@@ -24,5 +24,10 @@
         <img src="image-1.jpg">
         <div class="class-2"></div>
     </p>
+<div>
+    <p>Этот текст для пояснения</p>
+</div>
+
+
 </body>
 </html>
